--- a/events/ocr-police-challenge-leiria.html
+++ b/events/ocr-police-challenge-leiria.html
@@ -18,8 +18,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Portfolio Details - OCR Police Challenge - Leiria</title>
-    <meta content="50 Anos 25 Abril" name="description">
-    <meta content="50 anos, 25 abril, leiria, cinquentenario, revolucao" name="keywords">
+    <meta content="OCR Police Challenge, Leiria" name="description">
+    <meta content="OCR Police Challenge, leiria" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
