--- a/events/festa-das-rosas.html
+++ b/events/festa-das-rosas.html
@@ -18,8 +18,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
     <title>Portfolio Details - Festa das Rosas - Vila Franca</title>
-    <meta content="50 Anos 25 Abril" name="description">
-    <meta content="50 anos, 25 abril, leiria, cinquentenario, revolucao" name="keywords">
+    <meta content="Festa das Rosas, Vila Franca" name="description">
+    <meta content="Festa das Rosas, Vila Franca, Vila Franca do Lima" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
