--- a/events/corrida-adepto.html
+++ b/events/corrida-adepto.html
@@ -18,8 +18,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Portfolio Details - Corrida Adepto</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Corrida Adepto, Leiria" name="description">
+  <meta content="Corrida Adepto, Corrida" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
