--- a/events/meia-maratona.html
+++ b/events/meia-maratona.html
@@ -18,8 +18,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Portfolio Details - Meia Maratona</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Meia Maratona, Leira" name="description">
+  <meta content="Maratona, Meia Maratona, Leiria" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
