--- a/events/piodao-foz-degua.html
+++ b/events/piodao-foz-degua.html
@@ -18,8 +18,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Portfolio Details - Piodão e Foz D'Égua</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Piodão e Foz D'Égua" name="description">
+  <meta content="Piodão, Foz D'Égua" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
