--- a/events/world-of-hans-zimmer.html
+++ b/events/world-of-hans-zimmer.html
@@ -18,8 +18,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Portfolio Details - The World of Hans Zimmer</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="The World of Hans Zimmer" name="description">
+  <meta content="The World of Hans Zimmer, Hans, Zimmer" name="keywords">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
