--- a/events/zoo-lisboa.html
+++ b/events/zoo-lisboa.html
@@ -131,7 +131,7 @@
                             <h3><span data-i18n="details"></span></h3>
                             <ul>
                                 <li><strong><span data-i18n="category"></span></strong>: <span
-                                        data-i18n="sports"></span></li>
+                                        data-i18n="national"></span></li>
                                 <li><strong><span data-i18n="event"></span></strong>: Jardim Zoológico de Lisboa</li>
                                 <li><strong><span data-i18n="date"></span></strong>: 16 Jul, 2024</li>
                                 <li><strong>Website:</strong> <a href="https://www.zoo.pt/" target="_blank">Zoo</a></li>
