--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://www.goodreads.com/user/show/174311663-tiago-b" target="_blank" class="goodreads"><i
               class="icon-goodreads"></i></a>
-          <!--<a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>-->
+          <a href="https://www.instagram.com/athinghedid/" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
         </div>
       </div>
 
