--- a/index.html
+++ b/index.html
@@ -279,6 +279,17 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/la-vuelta/2024_08_18_5306.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/la-vuelta/2024_08_18_5306.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="La Vuelta - Aug 18, 2024"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/la-vuelta.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/leiria-medieval/2024_07_21_4709.jpg" class="img-fluid" alt="">
