--- a/index.html
+++ b/index.html
@@ -278,7 +278,18 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-          
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/bencao-capacetes/IMG_8584.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/bencao-capacetes/IMG_8584.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Benção Capacetes, Fátima - Set 23, 2024"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/bencao-capacetes.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/mreal/IMG_7165.jpg" class="img-fluid" alt="">
