--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               <img src="assets/img/portfolio/bencao-capacetes/IMG_8584.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/bencao-capacetes/IMG_8584.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Benção Capacetes, Fátima - Set 23, 2024"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                  class="portfolio-lightbox" title="Bênção Capacetes, Fátima - Set 23, 2024"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
                 <a href="events/bencao-capacetes.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span id="text-small">Visitar</span></a>
               </div>
             </div>
