--- a/events/bencao-capacetes.html
+++ b/events/bencao-capacetes.html
@@ -17,9 +17,9 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Portfolio Details - Benção Capacetes - Fátima</title>
-    <meta content="Benção Capacetes, IX Peregrinação" name="description">
-    <meta content="benção capacetes, benção, capacetes, peregrinação, fátima, fatima, motas, bikes, riding, touring" name="keywords">
+    <title>Portfolio Details - Bênção Capacetes - Fátima</title>
+    <meta content="Bênção Capacetes, IX Peregrinação" name="description">
+    <meta content="bênção capacetes, bênção, capacetes, peregrinação, fátima, fatima, motas, bikes, riding, touring" name="keywords">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
