bênção - more fixed

--- a/events/bencao-capacetes.html
+++ b/events/bencao-capacetes.html
@@ -128,12 +128,12 @@
                             <ul>
                                 <li><strong><span data-i18n="category"></span></strong>: <span
                                         data-i18n="national"></span></li>
-                                <li><strong><span data-i18n="event"></span></strong>: Benção Capacetes, IX Peregrinação - Fátima</li>
+                                <li><strong><span data-i18n="event"></span></strong>: Bênção Capacetes, IX Peregrinação - Fátima</li>
                                 <li><strong><span data-i18n="date"></span></strong>: 23 Set, 2024</li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
-                            <h2>Benção Capacetes</h2>
+                            <h2>Bênção Capacetes</h2>
                             <p>
                                 IX Peregrinação
                             </p>
