--- a/events/pavilhao-conhecimento.html
+++ b/events/pavilhao-conhecimento.html
@@ -1845,7 +1845,7 @@
             </div>
         </div>
 
-        <div class="container-fluid"></div>
+        <div class="container-fluid">
             <div class="row no-gutter">
 
                 <div class="container portfolio-details">
@@ -2384,7 +2384,8 @@
             margin-right: auto; text-shadow: 1px 1px 2px black;"> <b><i>Saída</i></b> </h2>
             </div>
         </div>
-        <div class="container-fluid"></div>
+        
+        <div class="container-fluid">
             <div class="row no-gutter">
 
                 <div class="container portfolio-details">
