--- a/index.html
+++ b/index.html
@@ -279,6 +279,17 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/11-trail-fatima/IMG_0345.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/11-trail-fatima/IMG_0345.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="11º Trail de Fátima, Fátima - Out 27, 2024"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/11-trail-fatima.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/pav-conhec/IMG_0181.jpg" class="img-fluid" alt="">
