--- a/events/magusto-pias-longas.html
+++ b/events/magusto-pias-longas.html
@@ -594,8 +594,8 @@
                                     <div class="swiper-slide">
                                         <div class="portfolio">
                                           <div class="portfolio-wrap">
-                                            <video class="img-fluid" muted>
-                                              <source src="../assets/img/portfolio/pias-longas/stop-bike.mp4" type="video/mp4">
+                                            <video class="img-fluid" muted autoplay loop>
+                                              <source src="../assets/img/portfolio/pias-longas/stop-bike.mp4" type="video/mp4" >
                                             </video> 
                                             <div class="portfolio-links">
                                               <a href="../assets/img/portfolio/pias-longas/stop-bike.mp4"
