--- a/index.html
+++ b/index.html
@@ -283,6 +283,19 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/7-chicharo/climb.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/7-chicharo/climb.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="7º Trail do Chícharo da Serra - Nov 16, 2024"><i
+                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/7-chicharo.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                    id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/pias-longas/IMG_0016.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/pias-longas/IMG_0016.jpg" data-gallery="portfolioGallery"
@@ -800,7 +813,6 @@
       }
 
       function calculateAge(birthDate) {
-        debugger;
         birthDate = new Date(birthDate);
         const otherDate = new Date(new Date().getFullYear(), new Date().getMonth()+1, new Date().getDate());
         console.log(otherDate.getFullYear());
