--- a/events/sabugal.html
+++ b/events/sabugal.html
@@ -129,11 +129,11 @@
                             <h3><span data-i18n="details"></span></h3>
                             <ul>
                                 <li><strong><span data-i18n="category"></span></strong>: <span
-                                        data-i18n="sports"></span></li>
+                                        data-i18n="national"></span></li>
                                 <li><strong><span data-i18n="event"></span></strong>: Sortelha e Presépio Sabugal</li>
                                 <li><strong><span data-i18n="date"></span></strong>: 8 Dez, 2024</li>
                                 <li><strong>Website:</strong> <a href="https://www.cm-sabugal.pt/sabugal-presepio-o-maior-presepio-natural-2024/"
-                                    target="_blank">Sabugal Presepio</a></li>
+                                    target="_blank">Sabugal - Presépio</a></li>
                             </ul>
                         </div>
                         <div class="portfolio-description">
