--- a/index.html
+++ b/index.html
@@ -281,14 +281,14 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/sabugal/presepio/IMG_0396.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/sabugal/presepio/IMG_0396.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Presépio Sabugal - Dec 08, 2024"><i
                     class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
-                <a href="events/7-chicharo.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                <a href="events/sabugal.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
                     id="text-small">Visitar</span></a>
               </div>
             </div>
