--- a/events/nascente-rio-liz.html
+++ b/events/nascente-rio-liz.html
@@ -76,7 +76,9 @@
         <div class="social-links mt-3 text-center">
           <a href="https://www.goodreads.com/user/show/174311663-tiago-b" target="_blank" class="goodreads"><i
               class="icon-goodreads"></i></a>
-          <a href="https://www.instagram.com/tiago.batista_athinghedid" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/tiago.batista_athinghedid" target="_blank" class="instagram"><i
+              class="bx bxl-instagram"></i></a>
+          <a href="https://tbfotos.photohawk.com" target="_blank" class="" style="background: transparent;"><img src="../assets/img/phawk-logo.jpg" style="width: 35px; margin-top: 3px;"/></a>
         </div>
       </div>
 
