--- a/events/zoo-lisboa.html
+++ b/events/zoo-lisboa.html
@@ -77,14 +77,16 @@
         <div class="d-flex flex-column">
 
             <div class="profile">
-                <img src="../assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-                <h1 class="text-light"><a href="../index.html">Tiago B.</a></h1>
-                <div class="social-links mt-3 text-center">
-                    <a href="https://www.goodreads.com/user/show/174311663-tiago-b" target="_blank" class="goodreads"><i
-                            class="icon-goodreads"></i></a>
-                    <a href="https://www.instagram.com/tiago.batista_athinghedid" target="_blank" class="instagram"><i class="bx bxl-instagram"></i></a>
-                </div>
-            </div>
+        <img src="../assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <h1 class="text-light"><a href="../index.html">Tiago B.</a></h1>
+        <div class="social-links mt-3 text-center">
+          <a href="https://www.goodreads.com/user/show/174311663-tiago-b" target="_blank" class="goodreads"><i
+              class="icon-goodreads"></i></a>
+          <a href="https://www.instagram.com/tiago.batista_athinghedid" target="_blank" class="instagram"><i
+              class="bx bxl-instagram"></i></a>
+          <a href="https://tbfotos.photohawk.com" target="_blank" class="" style="background: transparent;"><img src="../assets/img/phawk-logo.jpg" style="width: 35px; margin-top: 3px;"/></a>
+        </div>
+      </div>
 
             <nav id="navbar" class="nav-menu navbar">
                 <ul>
