--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
               class="icon-goodreads"></i></a>
           <a href="https://www.instagram.com/tiago.batista_athinghedid" target="_blank" class="instagram"><i
               class="bx bxl-instagram"></i></a>
+          <a href="https://tbfotos.photohawk.com" target="_blank" class="" style="background: transparent;"><img src="assets/img/phawk-logo.jpg" style="width: 35px; margin-top: 3px;"/></a>
         </div>
       </div>
 
