--- a/index.html
+++ b/index.html
@@ -284,6 +284,33 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/obidos-natal/IMG_0252.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/obidos-natal/IMG_0252.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Óbidos Vila Natal - Dec 29, 2024"><i
+                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/obidos-vila-natal.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                    id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/patinaliz/10.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/patinaliz/10.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="I Festival Patinaliz - Dec 22, 2024"><i
+                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/patinaliz.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                    id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/sabugal/presepio/IMG_0436.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/sabugal/presepio/IMG_0436.jpg" data-gallery="portfolioGallery"
