--- a/index.html
+++ b/index.html
@@ -681,7 +681,8 @@
 
               <ul>
                 <h6><b>Canon EOS M50 Mark II</b> </h6>
-                <li><small><i>EF-M 15-45mm f/3.5-6.3 IS STM</i></small></li>
+                <li><small><i>Sigma 18-35mm f/1.8 DC HSM ART</i></small></li>
+                <li><small><i>Canon EF-M 15-45mm f/3.5-6.3 IS STM</i></small></li>
                 <li><small><i>Sigma 56mm F1.4 DC DN Contemporary</i></small></li>
                 <li><small><i>Canon EF-S 18-135mm IS STM</i></small></li>
               </ul>
