--- a/index.html
+++ b/index.html
@@ -287,22 +287,9 @@
               <img src="assets/img/portfolio/rally-auren/IMG_0016.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/rally-auren/IMG_0016.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Rallye Terra Auren - Abr 05, 2025"><i
+                  class="portfolio-lightbox" title="Rallye Terras Auren - Abr 05, 2025"><i
                     class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
                 <a href="events/rally-auren.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
-                    id="text-small">Visitar</span></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
-            <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/tomar/IMG_0010.jpg" class="img-fluid" alt="">
-              <div class="portfolio-links">
-                <a href="assets/img/portfolio/tomar/IMG_0010.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Rallye Terras Auren - Apr 05, 2025"><i
-                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
-                <a href="events/tomar.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
                     id="text-small">Visitar</span></a>
               </div>
             </div>
