--- a/events/rally-auren.html
+++ b/events/rally-auren.html
@@ -420,7 +420,7 @@
                     </div>
                 </div>
 
-                <div class="container portfolio-details">
+                <div class="container portfolio-details mb-5">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="portfolio-details-slider swiper border border-info">
@@ -444,32 +444,6 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="container portfolio-details">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="portfolio-details-slider swiper border border-info">
-                                <div class="swiper-wrapper align-items-center text-center">
-
-                                    <div class="swiper-slide">
-                                        <div class="portfolio">
-                                            <div class="portfolio-wrap">
-                                                <img src="../assets/img/portfolio/rally-auren/IMG_0064.jpg" class="img-fluid"
-                                                    alt="">
-                                                <div class="portfolio-links">
-                                                    <a href="../assets/img/portfolio/rally-auren/IMG_0064.jpg"
-                                                        data-gallery="portfolioGallery-4" class="portfolio-lightbox"
-                                                        title="IMG_0064"><i class="bx bx-window-open"></i></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
 
 
             </div>
