rampa reg fetal, trilhos pastor, leiria run

--- a/index.html
+++ b/index.html
@@ -284,6 +284,45 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/leiria-run/r6a_5987.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/leiria-run/r6a_5987.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="10ª edição do Leiria Run - Mai 03, 2025"><i
+                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/leiria-run.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                    id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/trilhos-pastor/IMG_0303.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/trilhos-pastor/IMG_0303.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="15ª edição dos Trilhos do Pastor - Abr 27, 2025"><i
+                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/trilhos-pastor.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                    id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/rampa-reg-fetal/IMG_0041.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/rampa-reg-fetal/IMG_0041.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Rampa do Reguengo do Fetal - Abr 13, 2025"><i
+                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/rampa-reg-fetal.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                    id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/rally-auren/IMG_0016.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/rally-auren/IMG_0016.jpg" data-gallery="portfolioGallery"
@@ -737,6 +776,7 @@
                 <li><small><i>Canon EF-M 15-45mm f/3.5-6.3 IS STM</i></small></li>
                 <li><small><i>Sigma 56mm F1.4 DC DN Contemporary</i></small></li>
                 <li><small><i>Canon EF-S 18-135mm IS STM</i></small></li>
+                <li><small><i>DJI Mini 3</i></small></li>
               </ul>
             </p>
           </div>
