eventos em falta - pombal, trail agroal, fna, a porta

--- a/index.html
+++ b/index.html
@@ -282,6 +282,58 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/fna/IMG_0206.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/fna/IMG_0206.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Feira Nacional da Agricultura - Jun 10, 2025"><i
+                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/fna.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                    id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/aporta/IMG_0270.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/aporta/IMG_0270.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="10ª edição d'A Porta - Jun 07, 2025"><i
+                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/aporta.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                    id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/trail-agroal/3.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/trail-agroal/3.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="3ª edição Agroal Trail - Jun 01, 2025"><i
+                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/trail-agroal.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                    id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/pombal/IMG_0028.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/pombal/IMG_0028.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Pombal - Mai 25, 2025"><i
+                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/pombal.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                    id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item filter-desporto">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/leiria-run/r6a_5987.jpg" class="img-fluid" alt="">
