--- a/index.html
+++ b/index.html
@@ -283,6 +283,18 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-estrangeiro">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/valencia/dia3/museu/IMG_0670.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/valencia/dia3/museu/IMG_0670.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Valência - Set 24-27, 2025"><i
+                    class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/valencia.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span
+                    id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
             <div class="portfolio-wrap">
