--- a/events/valencia.html
+++ b/events/valencia.html
@@ -204,6 +204,10 @@
             </div>
         </div>
 
+        <div id="floating-top-btn" title="Voltar ao topo" style="position: fixed; right: 30px; bottom: 30px; z-index: 9999; display: none; background: #007bff; color: #fff; border-radius: 50%; width: 55px; height: 55px; justify-content: center; align-items: center; cursor: pointer; box-shadow: 0 2px 8px rgba(0,0,0,0.2); font-size: 2em;">
+            <i class="bx bx-chevron-up"></i>
+        </div>
+
         <div class="container portfolio-details" id="dia1">
             <div class="row no-gutter">
             <div class="container portfolio-details"><div class="row"><div class="col-lg-12"><div class="portfolio-details-slider swiper border border-info"><div class="swiper-wrapper align-items-center text-center"><div class="swiper-slide"><div class="portfolio"><div class="portfolio-wrap"><img src="../assets/img/portfolio/valencia/dia1/IMG_0001.jpg" class="img-fluid" alt=""><div class="portfolio-links"><a href="../assets/img/portfolio/valencia/dia1/IMG_0001.jpg" data-gallery="portfolioGallery-dia1" class="portfolio-lightbox" title="Dia 1"><i class="bx bx-window-open"></i></a></div></div></div></div></div></div></div></div></div>
@@ -742,6 +746,15 @@ Existem alguns equívocos sobre a história da Casa dos Gatos. A casa nem sempre
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
+            var topBtn = document.getElementById('floating-top-btn');
+                window.addEventListener('scroll', function() {
+                    topBtn.style.display = (window.scrollY > 300) ? 'flex' : 'none';
+                });
+                topBtn.onclick = function() {
+                    window.scrollTo({top: 0, behavior: 'smooth'});
+                };
+
+                
             var btn = document.getElementById('floating-skip-btn');
             var gumball = document.getElementById('gumball');
             function updateBtnVisibility() {
