wrong category fixed

--- a/events/valencia.html
+++ b/events/valencia.html
@@ -130,7 +130,7 @@
                             <h3><span data-i18n="details"></span></h3>
                             <ul>
                                 <li><strong><span data-i18n="category"></span></strong>: <span
-                                        data-i18n="national"></span></li>
+                                        data-i18n="foreign"></span></li>
                                 <li><strong><span data-i18n="event"></span></strong>: Valência </li>
                                 <li><strong><span data-i18n="date"></span></strong>: 24-27 Set, 2025</li>
                                 <br><br><li><strong>Índice</strong>:
@@ -754,7 +754,7 @@ Existem alguns equívocos sobre a história da Casa dos Gatos. A casa nem sempre
                     window.scrollTo({top: 0, behavior: 'smooth'});
                 };
 
-                
+
             var btn = document.getElementById('floating-skip-btn');
             var gumball = document.getElementById('gumball');
             function updateBtnVisibility() {
