--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>A thing he did - Collection</title>
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://www.athinghedid.com/">
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -43,6 +46,21 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
   <link href="assets/css/custom.css" rel="stylesheet">
+
+  <!-- Structured data for Site (helps Google understand site) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "url": "https://www.athinghedid.com/",
+    "name": "A thing he did - Collection",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://www.athinghedid.com/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
 
   <!-- World map -->
   <script src="worldmap/mapdata.js"></script>
